[package]
name = "moq-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
js-sys = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["WebTransport"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
